--- a/css/style.css
+++ b/css/style.css
@@ -7,28 +7,65 @@
 }
 html {
     font-size: 62.5%;
+    box-sizing: border-box;
+}
+*, *:before, *:after {
+    box-sizing: inherit;
 }
 body {
-    font-size: 16px; /* 1rem = 10px*/
+    font-size: 1.6rem; /* 1rem = 10px*/
     font-family: 'Krub', sans-serif;
 }
-.titulo {
+h1 {    
+    font-size: 3.8rem;
+}
+h2 {
+    font-size: 2.8rem;
+}
+h3 {
+    font-size: 1.8rem;
+}
+h1,h2,h3 {
     text-align: center;
-    font-size: 3.8rem;       
 }
 .contenedor {
-    width: 120rem;
+    max-width: 120rem;
     margin: 0 auto;
+}
+.boton {
+    background-color: var(--secondary);
+    color: var(--white);
+    padding: 1rem 3rem;
+    margin-top: 1rem;
+    font-size: 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 700;
+    border-radius: .5rem;
+    width: 80%;
+    text-align: center;
+}
+@media (width >= 780px) {
+    .boton {
+        width: auto;
+    }
 }
 .nav-bg {
     background-color: var(--secondary);
 }
 .nav-principal {    
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+}
+@media (width >= 768px) {
+    .nav-principal {
+        flex-direction: row;
+        justify-content: space-between;        
+    }
 }
 .nav-principal a {
     color: var(--white);
+    text-align: center;
     text-decoration: none;
     font-size: 2rem;
     font-weight: 700;
@@ -37,4 +74,32 @@ body {
 .nav-principal a:hover {
     background-color: var(--primary);
     color: var(--dark);
+}
+.hero {
+    background-image: url(../img/hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: calc(100% - 20%);
+    height: 50rem;    
+    position: relative;
+}
+.contenido-hero {
+    position: absolute;
+    background-color: rgba(0,0,0,.7); /*Anterior*/
+    background-color: rgb(0 0 0 / 70%);
+    width: 100%;
+    height: 100%;
+    /*Centrar un div*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.contenido-hero h2,
+.contenido-hero p {
+    color: var(--white);
+}
+.ubicacion {
+    display: flex;
+    align-items: flex-end;
 }
