Add style to the service area

--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,12 @@
     --primary: #FFC107;   
     --secondary: #0097A7;
     --gray: #757575;
+    --ligthGray: #DFE9F3;
 }
+/* Globales */
 html {
     font-size: 62.5%;
-    box-sizing: border-box;
+    box-sizing: border-box; /*Hack para box model */
 }
 *, *:before, *:after {
     box-sizing: inherit;
@@ -15,18 +17,7 @@ html {
 body {
     font-size: 1.6rem; /* 1rem = 10px*/
     font-family: 'Krub', sans-serif;
-}
-h1 {    
-    font-size: 3.8rem;
-}
-h2 {
-    font-size: 2.8rem;
-}
-h3 {
-    font-size: 1.8rem;
-}
-h1,h2,h3 {
-    text-align: center;
+    background-image: linear-gradient(to top, var(--ligthGray) 0%, var(--white) 100%);
 }
 .contenedor {
     max-width: 120rem;
@@ -50,6 +41,28 @@ h1,h2,h3 {
         width: auto;
     }
 }
+.sombra{
+    -webkit-box-shadow: 0px 5px 5px 0px rgba(112,112,112,0.53);
+    -moz-box-shadow: 0px 5px 5px 0px rgba(112,112,112,0.53);
+    box-shadow: 0px 5px 5px 0px rgba(112,112,112,0.53);
+    padding: 2rem;
+    border-radius: .5rem;
+}
+/* Tipografia */
+h1 {    
+    font-size: 3.8rem;
+}
+h2 {
+    font-size: 2.8rem;
+}
+h3 {
+    font-size: 1.8rem;
+}
+h1,h2,h3 {
+    text-align: center;
+}
+
+/* Navegación principal */
 .nav-bg {
     background-color: var(--secondary);
 }
@@ -75,6 +88,8 @@ h1,h2,h3 {
     background-color: var(--primary);
     color: var(--dark);
 }
+
+/* Hero */
 .hero {
     background-image: url(../img/hero.jpg);
     background-repeat: no-repeat;
@@ -82,6 +97,7 @@ h1,h2,h3 {
     background-position: calc(100% - 20%);
     height: 50rem;    
     position: relative;
+    margin-bottom: 2rem;
 }
 .contenido-hero {
     position: absolute;
@@ -102,4 +118,35 @@ h1,h2,h3 {
 .ubicacion {
     display: flex;
     align-items: flex-end;
+}
+
+/* Servicios */
+@media (width >= 768px) {
+    .servicios {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); 
+        column-gap: 1rem;  
+    }
+}
+.servicio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.servicio h3 {
+    color: var(--secondary);
+    font-weight: 400;
+}
+.servicio p {
+    line-height: 2;
+    text-align: center;
+}
+.servicio .iconos {
+    height: 15rem;
+    width: 15rem;
+    background-color: var(--primary);
+    border-radius: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
