--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
     --gray: #757575;
     --ligthGray: #DFE9F3;
 }
+
 /* Globales */
 html {
     font-size: 62.5%;
@@ -27,19 +28,23 @@ body {
     background-color: var(--secondary);
     color: var(--white);
     padding: 1rem 3rem;
-    margin-top: 1rem;
+    margin-top: 3rem;
     font-size: 2rem;
     text-decoration: none;
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: bold;
     border-radius: .5rem;
-    width: 80%;
+    width: 90%;
     text-align: center;
+    border: none;
 }
 @media (width >= 780px) {
     .boton {
         width: auto;
     }
+}
+.boton:hover {
+    cursor: pointer;
 }
 .sombra{
     -webkit-box-shadow: 0px 5px 5px 0px rgba(112,112,112,0.53);
@@ -48,6 +53,23 @@ body {
     padding: 2rem;
     border-radius: .5rem;
 }
+
+/* Utilidades */
+.w-sm-100 {
+    width: 100%;
+}
+@media (width >= 768px) {
+    .w-sm-100 {
+        width: auto;
+    } 
+}
+.flex {
+    display: flex;
+}
+.alinear-derecha {
+    justify-content: flex-end;
+}
+
 /* Tipografia */
 h1 {    
     font-size: 3.8rem;
@@ -149,4 +171,58 @@ h1,h2,h3 {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+}
+
+/* Contacto */
+.formulario {
+    background-color: var(--gray);
+    width: min(60rem, 100%); /*Utilizar el tamaño más pequeño*/
+    margin: 0 auto;
+    padding: 2rem;
+}
+.formulario fieldset {
+    border: none;
+}
+.formulario legend {
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;    
+    color: var(--primary);
+}
+@media (width >= 768px) {
+    .contenedor-campos {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto auto 20rem;
+        column-gap: 1rem;
+    }
+    .campo:nth-child(3),
+    .campo:nth-child(4) {
+        grid-column: 1 / 3;
+    }
+}
+.campo {
+    margin-bottom: 1rem;
+}
+.campo label {
+    color: var(--white);
+    font-weight: bold;
+    margin-bottom: .5rem;
+    display: flex;
+} 
+.campo textarea {
+    height: 20rem;
+}  
+.input-text {
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: .5rem;
+}
+
+/* Footer */
+.footer {
+    text-align: center;
 }
